--- a/web/src/main/webapp/css/common.css
+++ b/web/src/main/webapp/css/common.css
@@ -3,17 +3,53 @@ body{text-align:center;}
 table th, table td{
 	border:1px solid #b0b0b0;
 }
+ul{
+	list-style: none;
+	align-items: center;
+	padding:0;
+	margin:0;
+}
+#list-top{
+	display:flex;
+	justify-content: space-between;
+	
+}
+#list-top ul{display:flex;padding:0; margin:0}
+#list-top ul li:not(:first-child){margin-left:10px;}
+.category{background-color:#0b5ed7 !important; color:#fff !important;}
 table { text-align:center; margin: 0 auto;}
+.btnSet{text-align:center; margin:20px auto;}
+.btnSet button{padding: 8px 26px;}
 table tr{height:46px;}
 table.tb_list tr{height:38px;}
 table td{ padding: 8px 10px }
 table th{ background-color:#f6f6f6; text-align:center;}
-h2{margin:50px auto; text-align:center; margin-top:40px;}
+h2{margin:50px auto; text-align:center; margin-top:30px;}
 
 a:link, a:visited{text-decoration:none; color:inherit}
 a:hover{ text-decoration:underline; color:#3367d6;}
 
-.click a{display:block;}
+select{
+	height:32px;
+	cursor:pointer;
+	padding-left:10px;
+}
+
+.click{padding:0}
+.click a{display:block; padding:12px 0 9px 0; transition:all .2s}
+.click a:hover{background-color:#0d6efd; color:#fff; text-decoration:none}
+
+.list-flex{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	margin:10px auto;
+}
+.list-flex>div{
+	margin:0;
+}
+
+.mr-5{margin-right:20px;}
 
 .w-pct80 { width: 80% }
 .w-pct60 { width: 60% }
@@ -33,4 +69,6 @@ a:hover{ text-decoration:underline; color:#3367d6;}
 .w-px500 { width: 500px }
 .w-px600 { width: 600px }
 .w-px800 { width: 800px }
+.w-px840 { width: 840px }
+.w-px900 { width: 900px }
 .w-px1000 { width: 1000px }
